CSS & latte code styling

--- a/app/MemberModule/templates/Times.default.latte
+++ b/app/MemberModule/templates/Times.default.latte
@@ -1,14 +1,14 @@
 {block #head}
 <style type="text/css" n:syntax="off">
-#items td a {color: black;}
-#items td a.buttonLike {color: white;}
-.buttonMenu li {float: none;}
-#items {border-collapse: collapse;}
-#items, #items td, #items th {border: 1px solid #0089d2; margin: 0px; padding: 0.5ex 1ex;}
-#menuOnTop .buttonLike {font-size: 0.9em; margin-top: 1ex;}
-.firstColum {line-height: 2.5em; text-align: center; width: 6em;}
-#items .buttonLike {line-height: 1.5em;}
-#items {margin-top: 1em;}
+#items td a { color: black; }
+#items td a.buttonLike { color: white; }
+.buttonMenu li { float: none; }
+#items { border-collapse: collapse; }
+#items, #items td, #items th { border: 1px solid #0089d2; margin: 0; padding: 0.5ex 1ex; }
+#menuOnTop .buttonLike { font-size: 0.9em; margin-top: 1ex; }
+.firstColum { line-height: 2.5em; text-align: center; width: 6em; }
+#items .buttonLike { line-height: 1.5em; }
+#items { margin-top: 1em; }
 </style>
 
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
