--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -38,7 +38,7 @@ Naposledy jste byl přihlášen: <b>{$lastDate|date:'%A %d.%m.%Y %H:%M'}</b>.</p
 
 {if}<h3>Dokumenty</h3>
 <ol class="news" n:inner-foreach="$dokumentyList as $file">
-	<li><a n:class="$file->member_id == $user->getId() ? logged" n:href="Dokumenty:default#d$file->id" 
+	<li><a n:class="$file->member_id == $user->getId() ? logged" n:href="Dokumenty:default#f$file->id"
 	title="{$file->date_add|timeAgoInWords}">{$file->title}</a></li>
 </ol>
 {/if isset($file)}
