Opraveny texty emailů.

--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -11,6 +11,6 @@ Akci najdete na adrese {link //Akce:view,$akce->id}
 Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
 
 _____________________________________________________________
-Tato zpráva automaticky generovana informačním systémem 
+Tato zpráva byla automaticky vygenerována informačním systémem
 VZS Jablonec nad Nisou a není třeba na ní odpovídat
 http://member.vzs-jablonec.cz/
