--- a/app/MemberModule/templates/Mail/forgotPassword.latte
+++ b/app/MemberModule/templates/Mail/forgotPassword.latte
@@ -1,19 +1,20 @@
 {contentType text/plain; charset=utf-8}
 {var $mail->subject = '[VZS Jablonec] Nové heslo'}
-Zdravím
+Zdravím.
 
-Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
+Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
 Nové přístupové údaje do členské části:
 
 Přihlašovací jméno: {$member->login}
 Heslo: {$password}
 
-Tvůj profil najdeš na adrese: {link //Member:profile}
+Svůj profil najdeš na adrese: {link //Member:profile}
 Zde si můžeš změnit heslo a upravit své osobní údaje.
 
 Vstup na stránky pro členy: {link //Akce:default}
 
------------------------------------------------------------------------
-Tato zpráva byla generována automaticky a není potřeba na ní odpovídat. 
-VZS Jablonec
+_____________________________________________________________
+Tato zpráva byla automaticky vygenerována informačním systémem
+VZS Jablonec nad Nisou a není třeba na ní odpovídat
+http://member.vzs-jablonec.cz/
