--- a/app/MemberModule/templates/Mail/newMail.latte
+++ b/app/MemberModule/templates/Mail/newMail.latte
@@ -2,5 +2,6 @@
 {$text}
 
 _____________________________________________________________
-zpráva odeslána z informačního systému VZS Jablonec nad Nisou
+Tato zpráva byla automaticky vygenerována informačním systémem
+VZS Jablonec nad Nisou a není třeba na ní odpovídat
 http://member.vzs-jablonec.cz/
