--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,20 +1,20 @@
 ﻿{contentType text/plain; charset=utf-8}
 {var $mail->subject = '[VZS Jablonec] Vítejte v informačním systému VZS Jablonec nad Nisou'}
-Zdravím
+Zdravím.
 
-Právě si byl zaregistrován do systému Místní skupiny VZS Jablonec nad Nisou. 
+Právě si byl zaregistrován do systému Pobočného spolku VZS Jablonec nad Nisou.
 
 Zde jsou tvé přihlašovací údaje:
 
 Přihlašovací jméno: {$member->login}
 Heslo: {$member->password}
 
-Tvůj profil najdeš na adrese: {link //Member:profile}
+Svůj profil najdeš na adrese: {link //Member:profile}
 Zde si můžeš změnit heslo a upravit své osobní údaje.
 
 Vstup na stránky pro členy: {link //Akce:default}
 
 _____________________________________________________________
-Tato zpráva automaticky generovana informačním systémem 
+Tato zpráva byla automaticky vygenerována informačním systémem
 VZS Jablonec nad Nisou a není třeba na ní odpovídat
 http://member.vzs-jablonec.cz/
