--- a/app/MemberModule/templates/Mail/newWebHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newWebHlasovani.latte
@@ -4,10 +4,10 @@
     <title>[VZS Jablonec] Nové hlasování představenstva</title>
 </head>
 <body>
-<p>Zdravím</p>
+<p>Zdravím.</p>
 
 <p>Dnes {$hlasovani->date_add|date:'%d.%m.%Y'} v {$hlasovani->date_add|date:'H:i'} 
-bylo na nášem webu vytvořeno nové hlasováním představentstva. Můžete jen najít na adrese: 
+bylo na našem webu vytvořeno nové hlasování představentstva. Můžete jej najít na adrese:
 <a n:href="//Hlasovani:view,$hlasovani->id">{link //Hlasovani:view,$hlasovani->id}</a>
 <br>Toto hlasování končí {$hlasovani->date_deatline|date:'%d.%m.%Y'}</p>
 
@@ -21,9 +21,9 @@ bylo na nášem webu vytvořeno nové hlasováním představentstva. Můžete je
 
 <hr>
 <p>
-Tato zpráva automaticky generovana informačním systémem<br>
+Tato zpráva byla automaticky vygenerována informačním systémem<br>
 VZS Jablonec nad Nisou a není třeba na ní odpovídat<br>
-http://member.vzs-jablonec.cz/<br>
+http://member.vzs-jablonec.cz/
 </p>
 
 </body>
