--- a/app/MemberModule/templates/Mail/newZapis.latte
+++ b/app/MemberModule/templates/Mail/newZapis.latte
@@ -1,8 +1,8 @@
 {contentType text/plain; charset=utf-8}
 {var $mail->subject = '[VZS Jablonec] Nový zápis ze schůze'}
-Zdarvím
+Zdravím.
 
-Na náš web byla přidána nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
+Na náš web byla přidán nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
 
 Tento zápis najdete v příloze.
 
