--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,12 +1,12 @@
 {contentType text/plain; charset=utf-8}
 {var $mail->subject = '[VZS Jablonec] Soubor s výledky hlasování byl aktualizován'}
-Zdravím
+Zdravím.
 
-Dnes {$datum|date:'%d.%m.%Y'} v {$datum|date:'H:i'} byl na náš web nahrán aktualizováný soubor s hlasováním představentstva.
+Dnes {$datum|date:'%d.%m.%Y'} v {$datum|date:'H:i'} byl na náš web nahrán aktualizovaný soubor s hlasováním představentstva.
 
 Tento nový soubor najdete v příloze.
 
 _____________________________________________________________
-Tato zpráva automaticky generovana informačním systémem 
+Tato zpráva byla automaticky vygenerována informačním systémem
 VZS Jablonec nad Nisou a není třeba na ní odpovídat
 http://member.vzs-jablonec.cz/
