--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,13 +1,14 @@
 {contentType text/plain; charset=utf-8}
 {var $mail->subject = '[VZS Jablonec] Obnova hesla'}
-Zdravím
+Zdravím.
 
 Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
 
-Nové si můžete nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
+Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
 
 Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}
 
------------------------------------------------------------------------
-Tato zpráva byla generována automaticky a není potřeba na ní odpovídat. 
-VZS Jablonec
+_____________________________________________________________
+Tato zpráva byla automaticky vygenerována informačním systémem
+VZS Jablonec nad Nisou a není třeba na ní odpovídat
+http://member.vzs-jablonec.cz/
