Předělány emaily pro práci se šablonou. Doopraveny překlepy.

--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,5 +1,6 @@
-{contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS Jablonec] Nová akce čeká na Vaše schválení'}
+{layout layout.latte}
+{block text}
+{var $mail->subject = '[VZS Jablonec] Nová akce čeká na schválení'}
 Na web byla přidána následující akce:
 
 {$akce->name}
@@ -9,8 +10,4 @@ Tato akce není schválena a čeká na Vaše potvrzení.
 Akci najdete na adrese {link //Akce:view,$akce->id}
 
 Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
-
-_____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+{/block}
