--- a/app/MemberModule/templates/Mail/forgotPassword.latte
+++ b/app/MemberModule/templates/Mail/forgotPassword.latte
@@ -1,8 +1,9 @@
-{contentType text/plain; charset=utf-8}
+{layout layout.latte}
+{block text}
 {var $mail->subject = '[VZS Jablonec] Nové heslo'}
 Zdravím.
 
-Ze stránek VZS MS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
+Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
 Nové přístupové údaje do členské části:
 
@@ -13,8 +14,4 @@ Svůj profil najdeš na adrese: {link //Member:profile}
 Zde si můžeš změnit heslo a upravit své osobní údaje.
 
 Vstup na stránky pro členy: {link //Akce:default}
-
-_____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+{/block}
