--- a/app/MemberModule/templates/Mail/newMail.latte
+++ b/app/MemberModule/templates/Mail/newMail.latte
@@ -2,6 +2,5 @@
 {$text}
 
 _____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+Zpráva odeslána z informačního systému VZS Jablonec nad Nisou
+https://member.vzs-jablonec.cz/
