--- a/app/MemberModule/templates/Mail/newZapis.latte
+++ b/app/MemberModule/templates/Mail/newZapis.latte
@@ -1,12 +1,9 @@
-{contentType text/plain; charset=utf-8}
+{layout layout.latte}
+{block text}
 {var $mail->subject = '[VZS Jablonec] Nový zápis ze schůze'}
 Zdravím.
 
-Na náš web byla přidán nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
+Na náš web byl přidán nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
 
 Tento zápis najdete v příloze.
-
-_____________________________________________________________
-Tato zpráva automaticky generovana informačním systémem 
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+{/block}
