--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,12 +1,9 @@
-{contentType text/plain; charset=utf-8}
-{var $mail->subject = '[VZS Jablonec] Soubor s výledky hlasování byl aktualizován'}
+{layout layout.latte}
+{block text}
+{var $mail->subject = '[VZS Jablonec] Soubor s výsledky hlasování byl aktualizován'}
 Zdravím.
 
 Dnes {$datum|date:'%d.%m.%Y'} v {$datum|date:'H:i'} byl na náš web nahrán aktualizovaný soubor s hlasováním představentstva.
 
 Tento nový soubor najdete v příloze.
-
-_____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+{/block}
