--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,4 +1,5 @@
-{contentType text/plain; charset=utf-8}
+{layout layout.latte}
+{block text}
 {var $mail->subject = '[VZS Jablonec] Obnova hesla'}
 Zdravím.
 
@@ -7,8 +8,4 @@ Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
 Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
 
 Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}
-
-_____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
+{/block}
