--- a/app/MemberModule/templates/Feed.akce.latte
+++ b/app/MemberModule/templates/Feed.akce.latte
@@ -2,22 +2,21 @@
 {block #content}
 <title>VZS Jablonec Akce</title>
 <link>{link //Akce:default}</link>
-<description>Forum členů VZS Jablonec</description>
+<description>Akce VZS Jablonec</description>
 <item n:foreach="$items as $item">
 	<title>{$item->name|firstUpper}</title>	
 	{var $member = $item->member}
-	{* <dc:creator>{$member->surname} {$member->name}</dc:creator> *}
 	<author>{if $member}{$member->mail} ({$member->surname} {$member->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
-	<link>{link //Akce:view,$item->id}</link>
+	<link>{link //Akce:view $item->id}</link>
 	<guid isPermaLink="false">{$item->id}@{link Akce:default}</guid>
 	<description>
-	{block |escape}
+	{block|escape}
 	<p>
 	{$item->date_start|date:'%A %d.%m.%Y %H:%M'} -
 	{if $item->date_start->diff($item->date_end)->days}{$item->date_end|date:'%A %d.%m.%Y %H:%M'} {else}{$item->date_end|date:'%H:%M'}{/if}
 	</p>
 	<p>{$item->akce_for->text}</p>
-	<hr \>
+	<hr />
 	{/block}
 	{$item->description|texy}
 	</description>
