--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -21,7 +21,7 @@
 	<tr n:class="topic,hoverLike,(($post)and($post->date_add > $user->getIdentity()->date_last)) ? 'new',(($post)and($post->member_id == $user->getId())) ? logged">
 
 		<td class="title">
-			<a title="{$category->title|firstUpper}" n:href="Forum:topic,$category->id">
+			<a title="{$category->title|firstUpper}" n:href="Forum:category,$category->id">
 				<div class="headerLike">
 					<strong>{$category->title|firstUpper}</strong>
 				</div>
@@ -37,7 +37,7 @@
 				{*<a>*}
 			</div>
 			<div class="no-wrap">
-				<a title="{$post->date_add|timeAgoInWords}" n:href="Forum:viewPost,$post->id">
+				<a title="{$post->date_add|timeAgoInWords}" n:href="Forum:post,$post->id">
 					<span class="icon-chat-empty"><span> {$post->date_add|date:'%d.%m.%Y %H:%M'}
 				</a>
 			</div>
