Změna názvu šablony

--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,4 +1,4 @@
-{layout layout.latte}
+{layout '@mail_layout.latte'}
 {block text}
 {var $mail->subject = '[VZS Jablonec] Nová akce čeká na schválení'}
 Na web byla přidána následující akce:
