--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,4 +1,4 @@
-{layout layout.latte}
+{layout '@mail_layout.latte'}
 {block text}
 {var $mail->subject = '[VZS Jablonec] Soubor s výsledky hlasování byl aktualizován'}
 Zdravím.
