--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,4 +1,4 @@
-﻿{layout layout.latte}
+﻿{layout '@mail_layout.latte'}
 {block text}
 {var $mail->subject = '[VZS Jablonec] Vítejte v informačním systému VZS Jablonec nad Nisou'}
 Zdravím.
