--- a/app/MemberModule/templates/Mail/newWebHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newWebHlasovani.latte
@@ -1,4 +1,4 @@
-{layout layout.latte}
+{layout '@mail_layout.latte'}
 {block text}
 Zdravím.
 
@@ -9,7 +9,7 @@ Toto hlasování končí {$hlasovani->date_deatline|date:'%d.%m.%Y'}
 
 {$hlasovani->title}
 
-{!$hlasovani->text}
+{!$hlasovani->text|texy}
 
 Odpovědi:
 {foreach $odpovedi as $odpoved}
