--- a/app/MemberModule/templates/Mail/newZapis.latte
+++ b/app/MemberModule/templates/Mail/newZapis.latte
@@ -1,4 +1,4 @@
-{layout layout.latte}
+{layout '@mail_layout.latte'}
 {block text}
 {var $mail->subject = '[VZS Jablonec] Nový zápis ze schůze'}
 Zdravím.
