--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,9 +1,9 @@
-{layout layout.latte}
+{layout '@mail_layout.latte'}
 {block text}
 {var $mail->subject = '[VZS Jablonec] Obnova hesla'}
 Zdravím.
 
-Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o nové heslo.
+Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
 
 Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
 
