Šablony upraveny do HTML podoby

--- a/app/MemberModule/templates/Mail/@mail_layout.latte
+++ b/app/MemberModule/templates/Mail/@mail_layout.latte
@@ -1,6 +1,5 @@
-{contentType text/plain; charset=utf-8}
-{include text}
-_____________________________________________________________
-Tato zpráva byla automaticky vygenerována informačním systémem
-VZS Jablonec nad Nisou a není třeba na ni odpovídat
-https://member.vzs-jablonec.cz/
+{include #content}
+<hr>
+Tato zpráva byla automaticky vygenerována informačním systémem<br>
+VZS Jablonec nad Nisou a není třeba na ni odpovídat<br>
+<a href="https://member.vzs-jablonec.cz/">member.vzs-jablonec.cz</a>
