--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,11 +1,12 @@
 {layout '@mail_layout.latte'}
-{block text}
-{var $mail->subject = '[VZS Jablonec] Obnova hesla'}
-Zdravím.
+{contentType text/html; charset=utf-8}
+{block content}
+    <p>Zdravím.</p>
 
-Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
+    <p>Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.</p>
 
-Můžete si ho nastavit na adrese: {link //Sign:restorePassword pubkey => $pubkey}
+    <p>Můžete si ho nastavit na adrese: <a
+                href="//Sign:restorePassword pubkey => $pubkey">{link //Sign:restorePassword pubkey => $pubkey}</a></p>
 
-Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}
+    <p>Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}</p>
 {/block}
