--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,13 +1,13 @@
 {layout '@mail_layout.latte'}
-{block text}
-{var $mail->subject = '[VZS Jablonec] Nová akce čeká na schválení'}
-Na web byla přidána následující akce:
+{contentType text/html; charset=utf-8}
+{block content}
+    <p>Na web byla přidána následující akce:</p>
 
-{$akce->name}
+    <strong>{$akce->name}</strong>
+    <p>{$akce->perex|noescape|texy}</p>
+    <p>Tato akce není schválena a čeká na Vaše potvrzení.</p>
 
-Tato akce není schválena a čeká na Vaše potvrzení.
+    <p>Akci najdete na adrese <a href="//Akce:view,$akce->id">{link //Akce:view,$akce->id}</a></p>
 
-Akci najdete na adrese {link //Akce:view,$akce->id}
-
-Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
+    <p>Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.</p>
 {/block}
