--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,9 +1,19 @@
 {layout '@mail_layout.latte'}
-{block text}
-{var $mail->subject = '[VZS Jablonec] Soubor s výsledky hlasování byl aktualizován'}
-Zdravím.
+{contentType text/html; charset=utf-8}
+{block content}
+    <p>Zdravím.</p>
 
-Dnes {$datum|date:'%d.%m.%Y'} v {$datum|date:'H:i'} byl na náš web nahrán aktualizovaný soubor s hlasováním představentstva.
+    <p>Dnes {$hlasovani->date_add|date:'%d.%m.%Y'} v {$hlasovani->date_add|date:'H:i'}
+        bylo na našem webu vytvořeno nové hlasování představentstva. Můžete jej najít na adrese:
+        <a n:href="//Hlasovani:view,$hlasovani->id">{link //Hlasovani:view,$hlasovani->id}</a></p>
+    <p>Toto hlasování končí {$hlasovani->date_deatline|date:'%d.%m.%Y'}</p>
 
-Tento nový soubor najdete v příloze.
+    <strong>{$hlasovani->title}</strong>
+
+    <p>{$hlasovani->text|noescape|texy}</p>
+
+    <p>Odpovědi:
+    <ul n:foreach="$odpovedi as $odpoved">
+        <li>{$odpoved->text}</li>
+    </ul>
 {/block}
