--- a/app/MemberModule/templates/Mail/newZapis.latte
+++ b/app/MemberModule/templates/Mail/newZapis.latte
@@ -1,9 +1,7 @@
 {layout '@mail_layout.latte'}
-{block text}
-{var $mail->subject = '[VZS Jablonec] Nový zápis ze schůze'}
-Zdravím.
-
-Na náš web byl přidán nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}
-
-Tento zápis najdete v příloze.
+{contentType text/html; charset=utf-8}
+{block content}
+    <p>Zdravím.</p>
+    <p>Na náš web byl přidán nový zápis ze schůze, která se konala v {$datum|date:'%A %d.%m.%Y'}</p>
+    <p>Tento zápis najdete v příloze.</p>
 {/block}
