add css .time class

--- a/app/MemberModule/templates/Times.edit.latte
+++ b/app/MemberModule/templates/Times.edit.latte
@@ -2,8 +2,9 @@
 <link rel="stylesheet" href="{$basePath}/css/jquery-ui.custom.css" type="text/css">
 
 <style type="text/css" n:syntax="off">
-#ui-datepicker-div {font-size: 0.9em;}
-h2 {margin-top: 1ex;}
+#ui-datepicker-div { font-size: 0.9em;}
+h2 { margin-top: 1ex;}
+.time { text-align: center}
 </style>
 
 <script type="text/javascript" src="{$basePath}/js/jquery-ui.custom.min.js"></script>
