--- a/app/MemberModule/templates/Sign.restorePassword.latte
+++ b/app/MemberModule/templates/Sign.restorePassword.latte
@@ -4,5 +4,5 @@
 
   <hr>
 
-  <p>Tento okaz bude platný přesně do {$date_end|date:'d.m.Y H:i:s'} (zbývá {$time_remain|date:'%I:%S'})</p>
+  <p>Tento okaz bude platný přesně do {$date_end|date:'d.m.Y H:i:s'} (zbývá {$time_remain|date:'%H:%I:%S'})</p>
 {/block}
