CSS fix for better IDE implemetation

--- a/app/MemberModule/templates/Member.edit.latte
+++ b/app/MemberModule/templates/Member.edit.latte
@@ -3,14 +3,15 @@
 
 <style type="text/css" n:syntax="off">
 <!--
-	fieldset {border: none;}
-	fieldset table {margin-left: 1em}
-	legend {font-weight: bold; margin-bottom: 1ex; }
-	label {margin-right: 1em; white-space: nowrap;}
-	form table, form table textarea {width: 100%}
-	form table th {width: 7em; text-align: left; vertical-align: top;}
+	fieldset { border: none;}
+	fieldset table { margin-left: 1em}
+	legend { font-weight: bold; margin-bottom: 1ex;}
+	label { margin-right: 1em; white-space: nowrap;}
+	form { margin-top: 1em; }
+	form table, form table textarea { width: 100%}
+	form table th { width: 7em; text-align: left; vertical-align: top;}
 
-	#ui-datepicker-div {font-size: 1em;}
+	#ui-datepicker-div { font-size: 1em;}
 -->
 </style>
 
@@ -32,7 +33,6 @@
 <h1 n:block="title">Osobní profil</h1>
 
 {block #content}
-
 
 {control memberForm}
 
