Fix afrer merge

--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -7,7 +7,7 @@
     <p>{$akce->perex|noescape|texy}</p>
     <p>Tato akce není schválena a čeká na Vaše potvrzení.</p>
 
-    <p>Akci najdete na adrese <a href="//Akce:view,$akce->id">{link //Akce:view,$akce->id}</a></p>
+    <p>Akci najdete na adrese <a n:href="//Akce:view,$akce->id">{link //Akce:view,$akce->id}</a></p>
 
     <p>Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.</p>
 {/block}
