--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,17 +1,11 @@
-<<<<<<< HEAD
-{contentType text/plain; charset=utf-8}
-Zdravím
-=======
 {layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
     <p>Zdravím.</p>
->>>>>>> vzsjablonec/mail
 
     <p>Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.</p>
 
-    <p>Můžete si ho nastavit na adrese: <a
-                href="//Sign:restorePassword pubkey => $pubkey">{link //Sign:restorePassword pubkey => $pubkey}</a></p>
+    <p>Můžete si ho nastavit na adrese: <a n:href="//Sign:restorePassword pubkey => $pubkey">{link //Sign:restorePassword pubkey => $pubkey}</a></p>
 
     <p>Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}</p>
 {/block}
