--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -31,10 +31,10 @@ Naposledy jste byl přihlášen: <b>{$lastDate|date:'%A %d.%m.%Y %H:%M'}</b>.</p
 
 {if}<h3>Příspěvky ve fóru</h3>
 <ol class="news" n:inner-foreach="$forumList as $post">
-	<li><a n:class="$topic->member_id == $user->getId() ? logged" n:href="Forum:post,$post->id" 
-	title="{$topic->date_add|timeAgoInWords}">{$post->ref('forum_post','forum_topic_id')->title} ({$post->forum->title})</a></li>
+	<li><a n:class="$post->member_id == $user->getId() ? logged" n:href="Forum:post,$post->id"
+	title="{$post->date_add|timeAgoInWords}">{$post->ref('forum_post','forum_topic_id')->title} ({$post->forum->title})</a></li>
 </ol>
-{/if isset($topic)}
+{/if isset($post)}
 
 {if}<h3>Dokumenty</h3>
 <ol class="news" n:inner-foreach="$dokumentyList as $file">
