--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,38 +1,17 @@
-<<<<<<< HEAD
-﻿{contentType text/plain; charset=utf-8}
-Zdravím
-
-Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.
-
-Svoje heslo můžete nastavit na adrese: {link //Sign:restorePassword pubkey => $session->pubkey}
-Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})
-
-Tvůj profil najdeš na adrese: {link //Member:profile}
-Zde si můžeš změnit heslo a upravit své osobní údaje.
-
-Vstup na stránky pro členy: {link //News:default}
-
-_____________________________________________________________
-Tato zpráva automaticky generovana informačním systémem 
-VZS Jablonec nad Nisou a není třeba na ní odpovídat
-http://member.vzs-jablonec.cz/
-=======
-﻿{layout '@mail_layout.latte'}
+﻿﻿{layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
     <p>Zdravím.</p>
 
     <p>Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.</p>
 
-    <p>Tvoje přihlašovací jméno: {$member->login}</p>
     <p>Svoje heslo si můžeš nastavit na adrese:
-        <a href="//Sign:restorePassword pubkey => $session->pubkey">
+        <a n:href="//Sign:restorePassword pubkey => $session->pubkey">
             {link //Sign:restorePassword pubkey => $session->pubkey}</a><br>
         Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})</p>
 
-    <p>Svůj profil najdeš na adrese: <a href="//Member:profile">{link //Member:profile}</a><br>
+    <p>Svůj profil najdeš na adrese: <a n:href="//Member:profile">{link //Member:profile}</a><br>
         Zde si upravit své osobní údaje.</p>
 
-    <p>Vstup na stránky pro členy: <a href="//Akce:default">{link //Akce:default}</a></p>
+    <p>Vstup na stránky pro členy: <a n:href="//Akce:default">{link //Akce:default}</a></p>
 {/block}
->>>>>>> vzsjablonec/mail
