Fix for brach mail

--- a/app/MemberModule/templates/Mail/newHlasovani.latte
+++ b/app/MemberModule/templates/Mail/newHlasovani.latte
@@ -1,7 +1,7 @@
 {layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
-    <p>Zdravím.</p>
+    <p>Zdravím</p>
 
     <p>Dnes {$hlasovani->date_add|date:'%d.%m.%Y'} v {$hlasovani->date_add|date:'H:i'}
         bylo na našem webu vytvořeno nové hlasování představentstva. Můžete jej najít na adrese:
