--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,7 +1,7 @@
 ﻿﻿{layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
-    <p>Zdravím.</p>
+    <p>Zdravím</p>
 
     <p>Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.</p>
 
