--- a/app/MemberModule/templates/Mail/restorePassword.latte
+++ b/app/MemberModule/templates/Mail/restorePassword.latte
@@ -1,11 +1,11 @@
 {layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
-    <p>Zdravím.</p>
+    <p>Zdravím</p>
 
     <p>Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.</p>
 
-    <p>Můžete si ho nastavit na adrese: <a n:href="//Sign:restorePassword pubkey => $pubkey">{link //Sign:restorePassword pubkey => $pubkey}</a></p>
+    <p>Můžete si ho nastavit na adrese: <a n:href="//Sign:restorePassword pubkey => $session->pubkey">{link //Sign:restorePassword pubkey => $session->pubkey}</a></p>
 
-    <p>Tento odkaz bude fungovat do {$date_end|date:'H:i:s d.m.Y'}</p>
+    <p>Tento odkaz bude fungovat do {$session->date_end|date:'H:i:s d.m.Y'}</p>
 {/block}
