--- a/app/MemberModule/templates/Mail/akceConfirm.latte
+++ b/app/MemberModule/templates/Mail/akceConfirm.latte
@@ -1,6 +1,8 @@
 {layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
+    <p>Zdravím</p>
+
     <p>Na web byla přidána následující akce:</p>
 
     <strong>{$akce->name}</strong>
