--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -1,4 +1,4 @@
-﻿﻿{layout '@mail_layout.latte'}
+﻿{layout '@mail_layout.latte'}
 {contentType text/html; charset=utf-8}
 {block content}
     <p>Zdravím</p>
