--- a/app/MemberModule/templates/News.default.latte
+++ b/app/MemberModule/templates/News.default.latte
@@ -66,7 +66,7 @@ Naposledy jste byl přihlášen: <b>{$lastDate|date:'%A %d.%m.%Y %H:%M'}</b>.</p
 
 {if}<h3>Požádováno hodnocení akce</h3>
 <ol class="news" n:inner-foreach="$feedbackList as $feedback">
-	<li><a class="logged" n:href="Akce:view#rating $feedback->id"
+	<li><a class="logged" n:href="Akce:view#rating-edit $feedback->id"
 	title="{$feedback->date_end|timeAgoInWords}">{$feedback->name}</a></li>
 </ol>
 {/if isset($feedback)}
