--- a/app/PhotoModule/templates/Album.edit.latte
+++ b/app/PhotoModule/templates/Album.edit.latte
@@ -4,7 +4,7 @@
 <style type="text/css" n:syntax="off">
 	.photoList li { width: 150px; height: 100px; font-size: 1em; text-align: center; position: relative; cursor: move;}
 	.photoList li img:hover, .photoList li:hover img { border-color: #ea9419;}
-	.photoList li.hidden:before { background-color: rgba(0,10,100,0.7); width: 100%; height: 100%; position: absolute; top: 0px; bottom: 0px; display: block; z-index: 1; content: ' ';}
+	.photoList li.hidden:before { background-color: rgba(0,10,100,0.7); width: 100%; height: 100%; position: absolute; top: 0; bottom: 0; display: block; z-index: 1; content: ' ';}
 	.photoList li input.title { width: 98%; position: absolute; bottom: 0px; right: 0px; font-size: 0.8em; background-color: rgba(0,0,0,0.8); z-index: 2;}
 	.photoList li input.selected { position: absolute; top: 0px; left: 0px; z-index: 2;}
 	#frm-superForm label { font-weight: bold;}
@@ -35,7 +35,7 @@
 	$.Shortcuts.add({
 	    	mask: 'Ctrl+A',
 	    	handler: function() {
-        		$('input.select').attr('checked','true');
+        		$('input.selected').attr('checked','true');
     		}
 	});
 
