--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -12,7 +12,6 @@ body, body table {font-family: Verdana,Arial,Helvetica,Calibri,sans-serif; font-
 border-radius: 0 0 15px 15px; float: right; color: #12397e; font-weight: bold; font-size: 1.2em;}
 
 #top #top_right a {color: #da251c}
-#top table td {vertical-align: top;}
     
 #menu { float: left; list-style-type: none; margin: 0; padding: 0; }
 #menu li a {display: block; text-decoration: none; color: inherit;}
@@ -73,7 +72,7 @@ div#texyPreview.texy {border: none; padding: 0;}
 .buttonMenu {padding: 0; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
 
-#top h1 {font-size: 1.9em; color: #d90424; margin-top: 1em; margin-left: 1ex;}
+#top h1 {font-size: 1.9em; color: #d90424; margin: 1ex 1ex; display: inline-block; vertical-align: 100%;}
 h2 {font-size: 1.3em; margin-top: 1ex;}
 h3 {font-size: 1em;}
 
